/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'idea'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.spring.io/milestone/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-web:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-jul:2.18.0'
    implementation 'io.opentelemetry:opentelemetry-exporter-jaeger:1.17.0'
    implementation 'io.opentelemetry:opentelemetry-exporter-zipkin:1.17.0'
    implementation 'io.opentelemetry:opentelemetry-sdk:1.17.0'
    implementation 'io.opentelemetry:opentelemetry-api:1.17.0'
    implementation 'io.opentelemetry:opentelemetry-sdk-extension-logging:1.7.1-alpha'
    implementation 'io.opentelemetry:opentelemetry-opentracing-shim:1.17.0-alpha'
    implementation 'io.opentelemetry:opentelemetry-semconv:1.17.0-alpha'
    implementation 'io.opentracing.contrib:opentracing-mongo-driver:0.1.5'
    implementation 'io.grpc:grpc-protobuf:1.48.1'
    implementation 'io.grpc:grpc-netty:1.48.1'
    implementation 'io.netty:netty-common:4.1.79.Final'
    implementation 'io.netty:netty-buffer:4.1.79.Final'
    implementation 'io.netty:netty-handler:4.1.79.Final'
    implementation 'io.netty:netty-transport-native-epoll:4.1.79.Final'
    implementation 'io.netty:netty-tcnative:2.0.48.Final'
    implementation 'io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.14.Final'
    implementation 'io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final'
    implementation 'io.vertx:vertx-core:4.3.3'
    implementation 'io.vertx:vertx-web:4.3.3'
    implementation 'io.vertx:vertx-auth-jwt:4.3.3'
    implementation 'io.vertx:vertx-auth-oauth2:4.3.3'
    implementation 'io.vertx:vertx-auth-webauthn:4.3.3'
    implementation 'io.vertx:vertx-web-templ-rocker:4.3.3'
    implementation 'io.vertx:vertx-maven-service-factory:4.3.3'
    implementation 'io.vertx:vertx-opentracing:4.3.3'
    implementation 'io.vertx:vertx-service-discovery:4.3.3'
    implementation 'org.javassist:javassist:3.29.1-GA'
    implementation 'io.lettuce:lettuce-core:6.2.0.RELEASE'
    implementation 'org.apache.commons:commons-pool2:2.11.1'
    implementation 'redis.clients:jedis:4.2.3'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'it.unimi.dsi:fastutil:8.5.8'
    implementation 'it.unimi.dsi:dsiutils:2.7.2'
    implementation 'org.apache.directory.mavibot:mavibot:1.0.0-M8'
    implementation 'org.hdrhistogram:HdrHistogram:2.1.12'
    implementation 'org.latencyutils:LatencyUtils:2.0.3'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'net.bytebuddy:byte-buddy:1.12.14'
    implementation 'net.bytebuddy:byte-buddy-agent:1.12.14'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.openjdk.jmh:jmh-core:1.35'
    implementation 'com.google.jimfs:jimfs:1.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.13.3'
    implementation 'org.jooq:jooq:3.17.3'
    implementation 'org.jooq:jooq-meta:3.17.3'
    implementation 'org.jooq:jooq-codegen:3.17.3'
    implementation 'io.quarkus:quarkus-core:2.11.2.Final'
    implementation 'io.quarkus:quarkus-core-deployment:2.11.2.Final'
    implementation 'io.quarkus:quarkus-resteasy:2.11.2.Final'
    implementation 'io.quarkus:quarkus-arc:2.11.2.Final'
    implementation 'org.springframework:spring-core:6.0.0-M5'
    implementation 'org.springframework:spring-expression:6.0.0-M5'
    implementation 'org.springframework:spring-beans:6.0.0-M5'
    implementation 'org.springframework:spring-context:6.0.0-M5'
    implementation 'org.springframework:spring-context-support:6.0.0-M5'
    implementation 'org.springframework:spring-jdbc:6.0.0-M5'
    implementation 'org.springframework:spring-webmvc:6.0.0-M5'
    implementation 'org.springframework:spring-webflux:6.0.0-M5'
    implementation 'org.springframework.cloud:spring-cloud-context:4.0.0-M4'
    implementation 'org.springframework.integration:spring-integration-core:6.0.0-M4'
    implementation 'org.springframework.integration:spring-integration-xml:6.0.0-M4'
    implementation 'org.springframework.integration:spring-integration-file:6.0.0-M4'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
    implementation 'com.typesafe:config:1.4.2'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'ru.yandex.clickhouse:clickhouse-jdbc:0.3.2'
    implementation 'org.postgresql:postgresql:42.4.2'
    implementation 'de.bwaldvogel:mongo-java-server:1.41.0'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.simplejavamail:simple-java-mail:7.5.0'
    implementation 'com.icegreen:greenmail:1.6.5'
    implementation 'com.squareup:javapoet:1.13.0'
    implementation 'org.eclipse.jetty:jetty-server:11.0.11'
    implementation 'org.eclipse.jetty:jetty-webapp:11.0.11'
    implementation 'org.hibernate.orm:hibernate-core:6.1.2.Final'
    implementation 'org.mongojack:mongojack:4.7.0'
    implementation 'org.mongodb.morphia:morphia:1.3.2'
    implementation 'org.mongodb:mongodb-driver-legacy:4.7.1'
    implementation 'org.nd4j:nd4j-native:1.0.0-M2.1'
    implementation 'org.nd4j:nd4j-native:1.0.0-M2.1'
    implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-M2.1'
    implementation 'org.freemarker:freemarker:2.3.31'
    implementation 'io.vavr:vavr:0.10.4'
    implementation 'one.util:streamex:0.8.1'
    implementation 'io.github.classgraph:classgraph:4.8.149'
    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'com.github.housepower:clickhouse-native-jdbc:2.6.5'
    runtimeOnly 'org.slf4j:jcl-over-slf4j:2.0.0'
    testImplementation 'io.quarkus:quarkus-junit5:2.11.2.Final'
    testImplementation 'io.rest-assured:rest-assured:5.1.1'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0-M4'
    testImplementation 'org.springframework.boot:spring-boot-starter-web:3.0.0-M4'
    testImplementation 'org.springframework:spring-test:6.0.0-M5'
    testImplementation 'org.springframework.security:spring-security-test:6.0.0-M6'
    testImplementation 'org.hamcrest:hamcrest-core:2.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.0'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
    testImplementation 'org.junit.platform:junit-platform-runner:1.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.7.0'
    testImplementation 'org.moditect.jfrunit:jfrunit-core:1.0.0.Alpha2'
    compileOnly 'com.fizzed:rocker-compiler:1.3.0'
    compileOnly 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
}

group = 'smagellan.idea-playground'
version = '1.0-SNAPSHOT'
description = 'experiments'
java.sourceCompatibility = JavaVersion.VERSION_17

compileJava {
    doFirst {
        options.compilerArgs += [
            '--add-modules', 'jdk.incubator.vector'
        ]
    }
}

configurations.each {
    logger.lifecycle('it: ' + it.getName());
    it.exclude group: 'log4j', module: 'log4j';
    it.exclude group: 'org.slf4j', module: 'slf4j-log4j12';
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
